# midiprog-rs

./: Cargo.toml  README.md
data/: dss-1.json  dw-8000.json  i3.json  ju-2.json  midi.json  midirc.cmd
src/: bin_main.rs  lib_main.rs  main.rs
src/lib/: command_parser.rs  config.rs  interpreter.rs  midi_command.rs  midi_interface.rs  midi_parser.rs  midicommand.rs  mod.rs  synth.rs  utils.rs
